Issue #6728 - QUIC and HTTP/3
- Fixed missing <release>17</release> element.
- Fixed --add-opens option in Surefire to run the tests.

Signed-off-by: Simone Bordet <simone.bordet@gmail.com>